@@ -1,3 +1,8 @@
+2008-05-30  Alexey Torkhov  <atorkhov@gmail.com>
+
+	* configure.ac, tinyxml/tinyxml.cpp, tinyxml/tinyxml.h: Use system
+	  tinyxml library if available.
+
 2008-05-16  Alexey Torkhov  <atorkhov@gmail.com>
 
 	* libwfut/platform.cpp: Fix to support gcc 4.3.
